--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.56.2",
     "react-native": "0.79.2",
     "react-native-asset": "^2.1.1",
+    "react-native-bootsplash": "^6.3.8",
     "react-native-config": "^1.5.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-fast-image": "^8.6.3",
@@ -43,7 +44,6 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-skeleton-placeholder": "^5.2.4",
-    "react-native-splash-screen": "^3.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
