--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-image-picker": "^8.2.1",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-keychain": "^10.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.23.8",
     "react-native-modal": "^14.0.0-rc.1",
@@ -82,4 +83,3 @@
     "node": ">=18"
   }
 }
-
