--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -40,5 +40,8 @@ hermesEnabled=true
 
 ENVFILE=.env
 
-
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=J0eey99$
+MYAPP_UPLOAD_KEY_PASSWORD=J0eey99$
 
